# spacetrace

./: Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml
spacetrace/: Cargo.toml
spacetrace/src/: bezier_util.rs  lib.rs  trace.rs
src/: lib.rs  poserot.rs  trace.rs
visualizer/: Cargo.toml
visualizer/examples/: generate_json.rs  test_data.json
visualizer/src/: main.rs
